<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_grp_starting"
        android:checkableBehavior="all"
        android:enabled="true"
        android:menuCategory="alternative"
        android:visible="true">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>


    <group
        android:id="@+id/nav_grp_settings"
        android:checkableBehavior="all"
        android:enabled="true"
        android:menuCategory="alternative"
        android:visible="true">
        <item
            android:id="@+id/nav_database"
            android:icon="@drawable/ic_favicon"
            android:title="@string/menu_database" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_favicon"
            android:title="@string/menu_login" />
    </group>
</menu>